# WOA-WebSite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  update.sh
.github/: dependabot.yml
.github/workflows/: pytest.yml
backend/: Dockerfile  pyproject.toml
backend/app/: pyproject.toml
backend/app/app/: dev_start.sh  init_user.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: albums.py  emails.py  files.py  lead.py  posts.py  questions_services.py  tokens.py
backend/app/app/core/: alerts.py  config.py  database.py  errors.py  file_manager.py  lead_manager.py  security.py
backend/app/app/crud/: base.py  crud_album.py  crud_article.py  crud_post.py  crud_questions_services.py  crud_token.py  crud_user.py
backend/app/app/models/: albums.py  articles.py  cases.py  questions_services.py  tokens.py  users.py
backend/app/app/schemas/: album.py  article.py  auth.py  case.py  email.py  lead_catch.py  post.py  questions_services.py  token.py  user.py
backend/app/app/static/: lead.json
backend/app/app/tests/: conftest.py
backend/app/app/tests/albums/: conftest.py  test_files_albums.py  test_get_albums.py  test_root_albums.py
backend/app/app/tests/auth/: conftest.py  test_get_token.py  test_refresh_token.py
backend/app/app/tests/files/: conftest.py  test_files.py
backend/app/app/tests/lead_catch/: conftest.py  test_root_lead.py
backend/app/app/tests/posts/: conftest.py  test_files_posts.py  test_get_posts.py  test_root_posts.py
backend/app/app/tests/questions_services/: conftest.py  test_get_questions_services.py  test_root_questions_services.py
backend/app/migrations/models/: 0_20220705212049_init.sql  10_20220717140400_change_article.sql  1_20220705212054_add_value.sql  2_20220710153429_change_login.sql  6_20220711233606_change_date_field.sql  7_20220712000517_add_owner_field.sql  8_20220712132603_delet_link_field.sql  9_20220713125444_add_questions_services.sql
config/: .env.dev  .env.dev.example  .env.example  .env.test.example
frontend/: Dockerfile
frontend/wayout/: .gitignore  jsconfig.json  next.config.js  package.json
frontend/wayout/components/: AppWrapper.js
frontend/wayout/components/About/: About.js  About.module.scss  aboutData.js
frontend/wayout/components/AdminPanel/: AdminLayout.js  AdminPanel.js  AdminPanel.module.scss  adminLinks.js  index.js
frontend/wayout/components/Albums/: Albums.js  Albums.module.scss
frontend/wayout/components/AlbumsCard/: AlbumsCard.js  AlbumsCard.module.scss  index.js
frontend/wayout/components/ArticleCard/: ArticleCard.js  ArticleCard.module.scss  index.js
frontend/wayout/components/CaseCard/: CaseCard.js  CaseCard.module.scss  index.js
frontend/wayout/components/Global/: Layout.js
frontend/wayout/components/Graduations/: Form.js  Graduations.js  Graduations.module.scss
frontend/wayout/config/: config.js
frontend/wayout/pages/: 404.js  500.js  _app.js  about.js  index.js  offer.js  policy.js
frontend/wayout/public/: robots.txt  sitemap.xml
frontend/wayout/services/: wayoutApi.js
frontend/wayout/styles/: globals.scss
frontend/wayout/utils/: cookies.js  phoneinput.js  scroll.js  tokens.js
(+197 files in other folders)
