[tool.poetry]
name = "wayout"
version = "0.1.0"
description = ""
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
psycopg2-binary = "^2.9.3"
tortoise-orm = "^0.19.2"
python-dotenv = "^0.21.0"
aerich = "^0.6.3"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
asyncpg = "^0.26.0"
python-jose = "^3.3.0"
colorama = "^0.4.5"
python-multipart = "^0.0.5"
slowapi = "^0.1.6"
aiofiles = "^22.1.0"
pytest = "^7.1.2"
httpx = "^0.23.0"
requests = "^2.28.1"
fastapi-mail = "^1.1.4"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
mypy = "^0.971"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.aerich]
tortoise_orm = "app.core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 109
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.mypy]
editable = true
