[tool.poetry]
name = "wayout"
version = "0.1.0"
description = ""
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.3"
tortoise-orm = "^0.19.3"
python-dotenv = "^0.21.1"
aerich = "^0.7.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
asyncpg = "^0.27.0"
python-jose = "^3.3.0"
colorama = "^0.4.5"
python-multipart = "^0.0.5"
slowapi = "^0.1.6"
aiofiles = "^22.1.0"
pytest = "^7.2.1"
httpx = "^0.23.0"
requests = "^2.28.1"
fastapi-mail = "^1.2.0"
aiogram = "^2.24"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"
mypy = "^0.991"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.aerich]
tortoise_orm = "app.core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 109
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.mypy]
editable = true
